--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Vintonm49
 
 # Build settings
-theme: Hamilton
+theme: Minima
 plugins:
   - jekyll-feed
 
